fixing homepage link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/dnyceboy/reactnotekeeper.git",
+  "homepage": "https://dnyceboy.github.io/reactnotekeeper/",
   "name": "using-pre-built-react-components",
   "version": "1.0.0",
   "description": "",
